--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Coding Quiz</title>
 
     <link rel="stylesheet" href="./assets/css/styles.css" />
+    <script src="script.js" />
   </head>
 
   <body>
@@ -27,7 +28,12 @@
 
       <div id="questions" class="hide">
         <h2 id="question-title"></h2>
-        <div id="choices" class="choices"></div>
+        <div id="choices" class="choices">
+        <button id="choiceA"></button>
+        <button id="choiceB"></button>
+        <button id="choiceC"></button>
+        <button id="choiceD"></button>
+          </div>
       </div>
 
       <div id="end-screen" class="hide">
