--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Coding Quiz</title>
-
-    <link rel="stylesheet" href="./assets/css/styles.css" />
-    <script src="script.js" />
+    <link rel="stylesheet" href="./assets/css/styles.css"/>
   </head>
 
   <body>
     <div class="scores"><a href="highscores.html">View Highscores</a></div>
 
-    <div class="timer">Time: <span id="time">0</span></div>
+    <div class="timer">Time: <span id="time">75</span></div>
 
     <div class="wrapper">
       <div id="start-screen" class="start">
@@ -48,7 +46,6 @@
       <div id="feedback" class="feedback hide"></div>
     </div>
 
-    <script src="./assets/js/questions.js"></script>
-    <script src="./assets/js/logic.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
