Added function to add scores by adding 5 to the variable score for each correct answer. Added function to end quiz and go to scores page when the time runs out.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>
           Try to answer the following code-related questions within the time
           limit. Keep in mind that incorrect answers will penalize your
-          score/time by ten seconds!
+          score/time by five seconds!
         </p>
         <button id="start">Start Quiz</button>
       </div>
@@ -43,7 +43,11 @@
         </p>
       </div>
 
-      <div id="feedback" class="feedback hide"></div>
+      <div id="timesup" class="hide">
+        <h2>Time's up! Better luck next time!</h2>
+      </div>
+
+      <div id="feedback" class="feedback-hide"></div>
     </div>
 
     <script src="./assets/js/script.js"></script>
