--- a/index.html
+++ b/index.html
@@ -43,12 +43,17 @@
         </p>
       </div>
 
-      <div id="timesup" class="hide">
-        <h2>Time's up! Better luck next time!</h2>
-      </div>
+     <!-- <div id="feedback" class="feedback-hide"></div>
+    </div>-->
+    
+    <div id=highScoresPage  class="hide">
+      <h1>Highscores</h1>
+      <ol id="highscores"></ol>
 
-      <div id="feedback" class="feedback-hide"></div>
+      <a href="index.html"><button>Go Back</button></a>
+      <button id="clear">Clear Highscores</button>
     </div>
+
 
     <script src="./assets/js/script.js"></script>
   </body>
